--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,11 @@ body{
     outline: none;
     border: none;
     resize: none;
+    background: linear-gradient(334deg, #6b97f7, #b9a03b, #f75713);
+	background-size: 180% 180%;
+	animation: gradient-animation 6s ease infinite;
+
     box-sizing: border-box;
-    background-color: rgb(194, 209, 209);
     font-family: 'Arial', sans-serif; /* Choose a nice font */
     font-size: 19px; /* Set a comfortable font size */
     overflow-y: auto;
@@ -88,8 +91,13 @@ button:hover:disabled {
 .custom-file-upload {
     border: 1px solid #ccc;
     padding: 6px 12px;
+    background-color: #7b7b79a0;
     color: white;
     cursor: pointer;
+    transition: 0.6s;
+}
+.custom-file-upload:hover{
+    color: #ff6f61;
 }
 
 .loading_text {
